Add in Byteman scaffolding for client side tests.